# ChangeLog for media-video/gpac
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/gpac/ChangeLog,v 1.107 2013/08/14 19:56:44 aballier Exp $

  14 Aug 2013; Alexis Ballier <aballier@gentoo.org> gpac-0.5.0.ebuild:
  depend on virtual/glu, bug #466632 by andcycle-gentoo.bugs@andcycle.idv.tw

  07 Aug 2013; Alexis Ballier <aballier@gentoo.org> gpac-0.5.0.ebuild,
  +files/gpac-0.5.0-ffmpeg2.patch:
  fix build with ffmpeg2

  22 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org>
  +files/gpac-0.5.0-libav9.patch, gpac-0.5.0.ebuild:
  Fix build with libav9 wrt bug#443424. Even tho the upstream patched it
  slightly differently they just fixed more deprec. warnings so it does not
  matter if we use this one or svn revisions.

  13 Jun 2013; Michael Weber <xmw@gentoo.org> gpac-0.4.5-r4.ebuild,
  gpac-0.4.5-r5.ebuild, gpac-0.5.0.ebuild:
  Depend on SLOT=0 of media-libs/openjpeg (bug 440086)

  01 Nov 2012; Diego E. Pettenò <flameeyes@gentoo.org> gpac-0.5.0.ebuild:
  Fix CVS header. Closes bug #440814.

  09 Oct 2012; Anthony G. Basile <blueness@gentoo.org> gpac-0.4.5-r5.ebuild:
  stable ppc ppc64, bug #437206

  07 Oct 2012; Raúl Porcel <armin76@gentoo.org> gpac-0.4.5-r5.ebuild:
  alpha/sparc stable wrt #437206

*gpac-0.5.0 (05 Oct 2012)

  05 Oct 2012; Ian Stakenvicius <axs@gentoo.org>
  +files/110_all_implicitdecls.patch, +files/gpac-0.5.0-build-fixes.patch,
  +files/160_all_externalamr.patch, +gpac-0.5.0.ebuild,
  +files/210_all_system_libogg.patch:
  version bump, bug 426666

  04 Oct 2012; Agostino Sarubbo <ago@gentoo.org> gpac-0.4.5-r5.ebuild:
  Stable for amd64, wrt bug #437206

  21 Feb 2012; Alexis Ballier <aballier@gentoo.org> gpac-0.4.5-r5.ebuild:
  add a patch to build with ffmpeg git and remove write only variables in the
  ebuild

  28 Nov 2011; Ian Stakenvicius <axs@gentoo.org> gpac-0.4.5-r5.ebuild:
  added explicit javascript disable to econf, bug 391887

*gpac-0.4.5-r5 (22 Nov 2011)
